syntax = "proto3";
package api;

import "Proto/iam/iam.proto";
import "Proto/flags/flags.proto";
import "Proto/user/user.proto";
import "Proto/wallet/wallet.proto";
import "Proto/vip/vip.proto";
import "Proto/message/message.proto";

option go_package = "github.com/leepala/OldGeneralBackend/Proto/api";

service api {
    // iam
    rpc IAMLogin(iam.IamLoginRequest) returns (iam.IamLoginReply);
    rpc IAMRegister(iam.CreateUserRequest) returns (iam.CreateUserReply);
    rpc IAMCheckLoginStatus(iam.IamCheckStatusRequest) returns (iam.IamCheckStatusReply);

    // wallet
    rpc GetCurrentGold(wallet.GetCurrentGoldRequest) returns (wallet.GetCurrentGoldReply);
    rpc UpdateGold(wallet.UpdateGoldRequest) returns (wallet.UpdateGoldReply);
    rpc FetchWaterFlow(wallet.FetchWaterFlowRequest) returns (wallet.FetchWaterFlowReply);


    // vip
    rpc ChargeVip(vip.ChargeVipRequest) returns (vip.ChargeVipReply);
    rpc GetVipStatus(vip.GetVipStatusRequest) returns (vip.GetVipStatusReply);

    // userInfo
    rpc GetUserInfo(user.GetUserInfoRequest) returns (user.GetUserInfoReply);
    rpc UpdateUserInfo(user.UpdateUserInfoRequest) returns (user.UpdateUserInfoReply);

    // message
    rpc FetchMessage(message.FetchMessageRequest) returns (message.FetchMessageReply);
    rpc GetRealTimeMessage(message.GetRealTimeMessageRequest) returns (message.GetRealTimeMessageReply);

    // flags
    rpc SearchMyFlag(flags.SearchMyFlagRequest) returns (flags.SearchMyFlagReply);
    rpc GetFlagDetail(flags.GetFlagDetailRequest) returns (flags.GetFlagDetailReply);
    rpc CreateFlag(flags.CreateFlagRequest) returns (flags.CreateFlagReply);
    rpc FetchFlagSquare(flags.FetchFlagSquareRequest) returns (flags.FetchFlagSquareReply);
    rpc GetSignInInfo(flags.GetSignInInfoRequest) returns (flags.GetSignInInfoReply);
    rpc SiegeFlag(flags.SiegeFlagRequest) returns (flags.SiegeFlagReply){}
    rpc FetchSiege(flags.FetchSiegeRequest) returns (flags.FetchSiegeReply) {}
    rpc PostComment(flags.PostCommentRequest) returns (flags.PostCommentReply) {}
    rpc FetchComment(flags.FetchCommentRequest) returns (flags.FetchCommentReply) {}
    rpc SearchFlag(flags.SearchFlagRequest) returns (flags.SearchFlagReply) {}
}
