syntax = "proto3";

package flags;

import "Proto/cdr/cdr.proto";

option go_package = "github.com/leepala/OldGeneralBackend/Proto/flags";

message SearchMyFlagRequest {
    string request_id = 1;
    int64 request_time = 2;
    string user_id = 3;
}

message SearchMyFlagReply {
    string request_id = 1;
    int64 reply_time = 2;
    repeated cdr.FlagBasicInfo flags = 4;
}

message GetFlagDetailRequest {
    string request_id = 1;
    int64 request_time = 2;
    string flag_id = 3;
}

message GetFlagDetailReply {
    string request_id = 1;
    int64 reply_time = 2;
    cdr.FlagDetailInfo info = 3;
}

message CreateFlagRequest {
    string request_id = 1;
    int64 request_time = 2;
    cdr.FlagBasicInfo info = 3;
}

message CreateFlagReply {
    string request_id = 1;
    int64 reply_time = 2;
}

message FetchFlagSquareRequest {
    string request_id = 1;
    int64 request_time = 2;
    int64 page = 3;
    int64 page_size = 4;
}

message FetchFlagSquareReply {
    string request_id = 1;
    int64 reply_time = 2;
    repeated cdr.FlagSquareItemInfo flags = 3;
}
